# aero-gemini

./: .editorconfig  .gitignore  DEVELOPMENT.md  README.md  sample-route.kml
.devcontainer/: devcontainer.json
.localdev/: Dockerfile  (+1 more)
backend/: .cursorrules  .gitignore  aero.db  pyproject.toml  run.py  seed.py
backend/.devcontainer/: devcontainer.json
backend/docs/: cursor-compose-dev.md
backend/docs/api/: cursor-endpoint-spec.yaml  endpoints.md
backend/docs/api/specs/algorithms/: flight-order.md
backend/logs/: app.2026-03-31_23-10-53_865600.jsonl
backend/src/aero/: main.py
backend/src/aero/api/: deps.py  router.py
backend/src/aero/api/routers/: auth.py  crew_members.py  flight_orders.py  helicopters.py  landing_sites.py  planned_operations.py  users.py
backend/src/aero/core/: config.py  database.py  logging.py  security.py
backend/src/aero/models/: __init__.py  audit.py  base.py  crew_member.py  enums.py  flight_order.py  helicopter.py  landing_site.py  planned_operation.py  user.py
backend/src/aero/repositories/: base.py
backend/src/aero/schemas/: auth.py  crew_member.py  flight_order.py  helicopter.py  landing_site.py  planned_operation.py  user.py
backend/src/aero/services/: auth.py  flight_order_routing.py  flight_orders.py  planned_operations.py
backend/tests/: conftest.py  test_auth_and_rbac.py  test_crew_members_api.py  test_crud_and_validation.py  test_flight_orders.py  test_health.py  test_helicopters_get.py  test_helicopters_post_put.py  test_kml_parsing.py  test_landing_sites_api.py  test_planned_operations.py  test_users_api.py
(+57 files in other folders)
