[project]
name = "aero"
dynamic = ["version"]
requires-python = "==3.12.8"
authors = [
    { name = "Paweł Mędyk", email = "medyk.pawel@gmail.com" },
    { name = "Oskar Smoczyński", email = "oskar.smoczynski@gmail.com" },
]

dependencies = [
    "email-validator>=2.3.0",
    "fastapi",
    "hatch-vcs",
    "httpx",
    "pendulum[test]",
    "pydantic",
    "pydantic-settings",
    "pyjwt>=2.12.1",
    "python-dotenv",
    "requests",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aero"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
local_scheme = "node-and-timestamp"

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "debugpy>=1.8.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.0",
    "httpx>=0.28.1",
    "pytest-html>=4.1.1",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
